# TAFFO-Syndrome-of-imaginary-bits

./: .gitignore  CMakeLists.txt  Makefile  README.md  Test.sh  fast_opt.sh  init_out.ll  start.sh
InitAndRange/: CMakeLists.txt
InitAndRange/InitializationAndRange/: AnnotationParser.cpp  AnnotationParser.h  Annotations.cpp  CMakeLists.txt  InitAndRange.cpp  InitAndRange.h
Initialization/: CMakeLists.txt
Initialization/InitializationPass/: AnnotationParser.cpp  AnnotationParser.h  Annotations.cpp  CMakeLists.txt  InitializerPass.cpp  InitializerPass.h
RangeAnalysis/: CMakeLists.txt
RangeAnalysis/VRA/: CMakeLists.txt  Range.h  ValueRangeAnalysis.cpp  ValueRangeAnalysis.h
StrangeBitsPrototype/StrangeBitsPrototypePass/: InitializerPass.cpp
TaffoUtils/: InputInfo.h
Test/: fast_clang.sh  test_file  test_file.bc  test_file.cpp
extended_fixed_point_prototype/: CMakeLists.txt  Makefile
extended_fixed_point_prototype/extended_fixed_point/: CMakeLists.txt  extended_fixed_point.hpp  extended_fixed_point_conversion.hpp  extended_fixed_point_external_operators.hpp  extended_fixed_point_utils.hpp  fixed_point_utils.hpp
extended_fixed_point_prototype/test/: CMakeLists.txt  bit_width_assignment.cpp  compile_time_bit_width_assignment.cpp  compile_time_type_assignment.cpp  conversion.cpp  conversion_test.cpp  difference.cpp  logic_operators.cpp  product.cpp  raw_value_constructor_initialization.cpp  raw_value_initialization.cpp  sum.cpp  sum_test_8bit_different_range.cpp  sum_test_8bit_equal_range.cpp  sum_tests.cpp  test.cpp  test1.cpp  type_assignment.cpp
fixed_point/: bit.hpp  exceptions.hpp  fixed_point.hpp  fixed_point_utils.hpp  high_fixed_point.hpp  low_fixed_point.hpp  normal_fixed_point.hpp
old_llvm_prototype/: CMakeLists.txt  press_me.sh
old_llvm_prototype/StrangeBitsPrototype/: CMakeLists.txt
old_llvm_prototype/StrangeBitsPrototype/StrangeBitsPrototypePass/: Annotations.cpp  CMakeLists.txt  Conversion.cpp  Conversion.h  InitializerPass.h
old_llvm_prototype/Test/: test_file.bc
test/: assignment.cpp  conversion.cpp  conversion_different_class.cpp  creation.cpp  difference.cpp  division.cpp  logical_operators.cpp  multiple_operations.cpp  product.cpp  sum.cpp  test.cpp  test_file.bc  test_file.cpp
test/other_testing_stuff/: number_generator.cpp  (+1 more)
(+6 files in other folders)
